src/scss/main.scss
/* ... */
.Bc-Coquitlam .broker-coquitlam span svg {
  width: 10px;
}
@media all and (max-width: 912px) {
  .currentRate .easy-application {
    background-size: auto;
}
  .wehelp_section .wehelp_text p.wehelp_title {
    left: 0;
  }
  .wehelp_section .wehelp_text p.wehelp_title  :after {
    width: 50%;
    margin-left: 9%;
  }
  .faq_section .faq_text:before {
    width: 15%;
  }
  .meeting_section h3 :after {
    width: 64%;
  }

  footer {
    .wrap {
      width: 55%;
      p.widget_title {
        color: $color-white;
        font-family: "AvenirBook";
        font-size: 25px;
        span {
          color: $color-secondary;
        }
      }
      a {
        display: block;
        text-decoration: none;
        color: $color-white;
        font-family: "AvenirBook";
        font-size: 15px;
      }

      .footer-logo {
        width: 200px;
        margin: 50px auto;
        text-align: center;
      }
      .row {
        div:nth-child(3) {
          text-align: center;
        }
        div {
          text-align: center;
        }
      }
    }
  }
  .flexability-slider .carouselcaption .bannerCaption {
    position: relative;
    z-index: 99;
    padding: 10px 80px;
    margin-top: 0;
}
.navbar-nav ul {
  list-style: none;
  display: initial;
  margin-top: revert;
}
}
@media all and (max-width: 768px) {
  .pagination {
    display: block !important;
  }
  footer .wrap .footer-menu ul {
    display: block;
  }
  :after{
    display: none;
  }
  .home-slider .carousel-indicators {
    bottom: 4%;
}
  .Bc-Coquitlam .renovation-row {
      flex-wrap: wrap;
      width: 100%;
  }
  .Bc-Coquitlam .renovation-row .renovation.nav-tabs {
    width: 100%;
}
.Bc-Coquitlam .renovation-row .tab-content {
  width: 100%;
}
.our-locations .location-images .col div a {
  font-size: 15px;
}

  .navbar-nav a:hover {
    border-bottom: unset;
}
  .navbar-nav a:hover:before {
   display:none;
}
  .navbar-nav a {
    text-align: center;
}
  .wehelp_image video {
    width: 100% !important; 
}
  .navbar-nav ul {
    flex-direction: column;
  }
  h2,
  span {
    :after,
    :before {
      display: none;
    }
  }
  .faq_section .faq_text:before {
    display: none;
  }
  .Banner_carouselcaption__NAlFf {
    bottom: 0;
  }



  footer {
    text-align: center;
    .wrap {
      .social-url {
        :before {
          left: 0%;
        }
        :after {
          right: 0%;
        }
      }
    }
  }
  .wehelp_section .wehelp_text p.wehelp_title {
    left: 0;
    padding: 30px 0;
    text-align: center;
  }
  .wehelp_section .wehelp_text p.wehelp_title span,
  .meeting_section h3 span,
  .split_section .split_text h3 span {
    display: inline;
  }
  .wehelp_section .wehelp_image,
  .split_section .split_image,
  .split_section .flex-row-reverse .split_image {
    width: 100%;
    text-align: center;
  }
  .Banner_carouselcaption__NAlFf {
    bottom: 10%;
    z-index: 999;
  }
  .works-container .works-title {
    text-align: center !important;
}
.wehelp_section:before {
  position: inherit;
}
.meeting_text {
  margin-bottom: 29px;
}
.flexability-slider .carouselcaption .bannerCaption .sliderTitle {
  font-size: 35px;
}
.flexability-slider .carouselcaption .bannerCaption .sliderSubtitle {
  font-size: 22px;
}
.flexability-slider .carouselcaption .bannerCaption p {
  margin-top: 17px;
}
.flexability-slider .carouselcaption .bannerCaption {
  position: relative;
  z-index: 99;
  padding: 10px 10px;
  margin-top: 0;
}
.faq_section {
  background-size: contain;
}
}
.mobile-banner{
  display: none;
}
/* ... */

